// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispatch PRODUCTS::NO_MORE 1`] = `
Object {
  "products": Object {
    "all": Object {},
    "hasMore": false,
    "loading": 0,
    "page": 0,
    "sort": "id",
  },
}
`;

exports[`Dispatch UNKNOWN ACTION 1`] = `
Object {
  "products": Object {
    "all": Object {},
    "hasMore": true,
    "loading": 0,
    "page": 0,
    "sort": "id",
  },
}
`;
